[gd_scene load_steps=4 format=3 uid="uid://gnu5m3sym8rh"]

[ext_resource type="Script" uid="uid://ce1sty7u7r26r" path="res://scripts/Hazard.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://chqhrykbwih13" path="res://assets/sprites/plane_1.webp" id="2"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(64, 32)

[node name="Plane" type="Area2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="DirectionLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -20.0
text = "DIR"
horizontal_alignment = 1

[node name="FlipLabel" type="Label" parent="."]
offset_left = -30.0
offset_top = 20.0
offset_right = 30.0
offset_bottom = 40.0
text = "FLIP"
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
